Ajustes método put
