# api/swagger/swagger.yaml
@@ -95,6 +95,12 @@ paths:
           required: true
           type: integer
           format: int64
+        - in: body
+          name: bodyxo
+          description: Created an pedido
+          required: true
+          schema:
+            $ref: '#/definitions/pedido2'
       responses:
         "200":
           description: Success
@@ -140,6 +146,24 @@ definitions:
     - modelo
     - fabricante
     - descricao
+    properties:
+      id:
+        type: integer
+        format: int64
+      tipo:
+        type: string
+        example: celular
+      modelo:
+        type: string
+        example: Galaxy A8
+      fabricante:
+        type: string
+        example: Samsung
+      descricao:
+        type: string
+        example: Smartphone xpto
+  pedido2:
+    type: object
     properties:
       id:
         type: integer
